--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
     <title>Calculadora</title>
 </head>
 <body>
+    <header> CALCULADORA </header>
     <div>
-        <p> 00</p>
-        <button class="gray">AC</button>
-        <button class="gray">+/-</button>
-        <button class="operador">/</button>
-        <button class="operador">*</button>
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="number">-</button>
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="number">+</button>
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="igual sinal">=</button>
-        <button class="number zero">0</button>
-        <button class="number">.</button>
+        <input class="display"> 
+        <button class="gray" onclick="limpar()">AC</button>
+        <button class="gray" onclick="inverse()"> +/-</button>
+        <button class="operador" onclick="adicionar('/')">/</button>
+        <button class="operador" onclick="adicionar('*')">*</button>
+        <button class="number" onclick="adicionar(7)" >7</button>
+        <button class="number" onclick="adicionar(8)" >8</button>
+        <button class="number" onclick="adicionar(9)" >9</button>
+        <button class="number" onclick="adicionar('-')" >-</button>
+        <button class="number" onclick="adicionar(4)" >4</button>
+        <button class="number" onclick="adicionar(5)" >5</button>
+        <button class="number" onclick="adicionar(6)" >6</button>
+        <button class="number" onclick="adicionar('+')" >+</button>
+        <button class="number" onclick="adicionar(1)" >1</button>
+        <button class="number" onclick="adicionar(2)" >2</button>
+        <button class="number" onclick="adicionar(3)" >3</button>
+        <button class="igual sinal" onclick="calculo()">=</button>
+        <button class="number zero"  onclick="adicionar(0)">0</button>
+        <button class="number " onclick="adicionar('.')" >.</button>
    
 
     </div>
